<?xml version="1.0"?>
<package format="2">
  <name>dvs_filter_bursts</name>
  <version>0.0.0</version>
  <description>Filter out bursts in a bag file</description>
  <maintainer email="tobias.fischer@qut.edu.au">Tobias Fischer</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>dvs_msgs</depend>

</package>
